# web_server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  a  contest_query.sql  docker-compose.yml  sqlx-data.json
.sqlx/: query-025f5f127418bcca2d8117aa8d86f47d3c98fb67830bb91be0641cb538a35848.json  query-02a4db05db819ef5927dbfcc0f593cae509a03b07685c73f274dcba7ff8f3b2e.json  query-033af44c5850ced7f85dbfed7f852ee08076b505e352e1c875653f31e73ad298.json  query-0506d5f7f581c1887e7e103dbf70755964a524cbdb08ff524edbd8e1680323a2.json  query-065255f82a043afcaa9d9dc5dbde78a70f7de431e23781c4b9769010951d639b.json  query-06a546d8426a284d20c7bc6b88f9e2867307f79a1959af38bcca35a8bf3c52b8.json  query-0b9ff4c93229ac6e1504a7a484f9b9b788c77c3ac9e5ed828ee27198bf9a59d9.json  query-0c1fe64ab1615c177be19dcb9fc08edc068f29d9b08e4bd8993bd7c7bb40909e.json  query-0dd279dd88f2a0b580b1eba422ed1d1ab7b73c7beea77a027d3e08952cedfed0.json  query-13916225e1ace2c3ee0886d3db5e0db4b920996349ef54dd7d77741e8aed2073.json  query-1482c8a02a15704171784149c14951f39287480bc94ebc1ee46dd3421fa2fbaf.json  query-19f68199279a2e33193976fd62357dc89cef17662acf257db13700c78ce18491.json  query-1d1b6394912f1370d17aee7bc3d8e37291ab79fdc072c1ea877ef3611fc9bfb1.json  query-266aea5e6bf32c3997e525ef6bfedc224c25b4d9ade9324352e79967db5c7467.json  query-2eaaa396d0ad8df48aa6da98cdb90a1f835730685cd883e01e42fd5c59c0e4a9.json  query-2ff39405d77214e1cb590af2fe8a510aa50e9833e01af4a10ee3cbae1669971b.json  query-3245140e322729410ca29f00496f1094b21235a6fb9f5fbc3c2894e251c84c47.json  query-35554474174d5cc19f47ccbad28fe7bcc33a6b3ea6dbc2fb4a3704ab3dfbf422.json  query-36bf7d4c0a132d6b0571376f2f55de1785a61a10e3570837100bb28008f736d6.json  query-3a909d38656a0597d4dbbedccf8b0e18546cb11884f36c8f876b1e536474d9c7.json  query-3ab09b52707e4766692a1930cf37b53d16009a72234fe872cb5d384d6a3f23fa.json  query-3e8919ee36c384b52e9e53cacec8298653f0ad77462a71e60e2edd0abf7ed66e.json  query-48745dde4735f130f2264ff6bbe613ced0abf0a5e8a7c9ab4608249085e6566c.json  query-4926a9fc378dbf2c3b673016e1872deffb97b754551733835022b3c507aadffc.json  query-49d330e74b933a2802e4221b35928b6b92e8095f370b436495a39051d0b074cf.json  query-5bccade846268ade6f863e5839e5345731a819b91f1675f3e0a8ebdac1d05d92.json  query-61e8e884ff839ee0daea15971620dd43eccd3bf1245ff66c4cc7014c19375204.json  query-62b5d49c0c3829e2e37e619c10a03a68db3ed7d11ccf878b43d745b8c294dde2.json  query-63bef03e55a0be280936d7e90e7a3bf98804f649d297076678dc56c9588a4ea3.json  query-666090386e459e5844948d4ac1f87f3fb598c76a9bebad37e056f773755d52a4.json  query-6dcbefe4380f0b3901106874988b61ebab93ea0e559670fe3f3fd904cf0cc505.json  query-7583ca74efbf81cee504d50010d46a18ef5c772b7aaee7a058c135e55e496870.json  query-75e0fd40432151031bd06fc9312e7fa529ac81c420c3da4911dee39cb8b9dd6f.json  query-7770c1ffb9444da89f0da7a1d1ef26a4dd74da393321554364274ef388806599.json  query-7b7889055481338cfd35c1ac00f56541dcf5badd0448ad3d44f8ecbd6aac95aa.json  query-7d0e0da1d81a6a286a9fb22107370f48dc23fabaa50daa022a3b77a1cfbdba88.json  query-80c73038c14bcbcf2a8f49186b98648182bc6e26717fb7b63412ff0f75597206.json  query-83147ab767d698395684238c7f1b2fffc30c39ef57eaf9473505a404a6042365.json  query-850a0ba304dd5383c9a260d7625907e3da93ad39b791db7295a05fc175b87233.json  query-87592ca038c4ef9ef17d7b60d7df23f7d33fb8393bf123c1ecbc638a3aeb04da.json  (+20 more)
configuration/: .env  a  configuration.yaml  configuration.yml  local.yml
migrations/: 0005_alter_testcases_to_text_array.sql  0005_trigger_to_notify_about_submissions.sql  0006_relations_table.sql  0007_Add_contest_participant_query.sql  0008_trigger_for_contest_submission_insertion.sql  0009_add_pgmq_postgres_queue.sql  0010_tags_table.sql  0011_change_paylod_of_submission_notification.sql  0012_add_field_is_frozen_to_table_contest.sql  20230301233822_create_users_table.sql  2_users_table.sql  3_create_confirmation_token.sql  4_contest_table.sql  t.sql  temp  temp.sql  tmp.sql
src/: .env  broker.rs  configuration.rs  database.rs  (+18 more)
(+227 files in other folders)
