[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_server"

[dependencies]
dotenvy = "0.15.6"
embed-doc-image-showcase = "0.1.2"
lapin = "2.1.1"
rabbitmq-stream-client = "*"
actix-web = "4.3.1"
serde_json = "1.0"
env_logger = "0.10.0"
async-global-executor = "2.3.1"
futures-lite = "1.12.0"
anyhow = "1.0.70"


[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"] 

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [ "runtime-actix-rustls","postgres", "migrate","macros", "chrono", "decimal", "uuid", "json" ]

[dependencies.diesel]
version = "2.0.0"
features = ["postgres","r2d2"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json","uuid"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]

[dependencies.config]
version = "0.13.3"

[dev-dependencies]
reqwest = "0.11.14"
