[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_server"

[dependencies]
dotenvy = "0.15.7"
lapin = "2.3.1"
rabbitmq-stream-client = "*"
serde_json = "1.0"
env_logger = "0.10.1"
async-global-executor = "2.4.1"
futures-lite = "2.2.0"
anyhow = "1.0.79"
axum-server = { version = "0.6.0", features = ["tokio-rustls"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-macros = "0.4.1"
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace", "limit", "set-header"] }
http = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.2", features = ["std"] }
axum_session = { version = "0.12.1", features = ["redis-db"] }
thiserror = "1.0.56"
rand = "0.8.5"
uuid = "1.6.1"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.23", features = ["json"] }
lettre = { version = "0.10.4", features = ["tokio1-rustls-tls", "tokio1-native-tls"] }
async-redis-session = "0.2.2"
axum = { version = "0.7.4",features = ["tokio", "multipart"] }
axum-sessions = "0.6.1"
async-session = "3.0.0"
redis = { version = "0.24.0", features = ["aio"] }
tokio = { version = "1",features = ["macros", "rt-multi-thread"]}
serde ={version = "1.0", features = ["derive"]}
config = { version = "0.13.4" }
# https://github.com/sfackler/rust-openssl/issues/603#issuecomment-822619837 
# without this feature cross compilation in Dockerfile is not possible
openssl = { version = "0.10.62", features = ["vendored"] }
async-stream = "0.3.5"
bb8-redis = "0.14.0"
bb8 = "0.8.1"
futures-util = "0.3.30"
primitypes = { path = "../primitypes"}
bb8-lapin = "0.5.0"
bit-vec = "0.6.3"
axum-extra = "0.9.2"
multer = "3.0.0"
tower-sessions = { version = "0.9.1", features = ["redis-store"] }
freq = "0.1.0"
fred = { version = "7.1.2", features = ["enable-rustls"] }
time = "0.3.31"
base64 = "0.21.7"
blake3 = "1.5.0"
ts-rs = { version = "7.1.1", features = ["chrono-impl"] }
validate = "0.6.1"
suppaftp = { version = "^5.3.1", features = ["async"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
#rustls = { version = "=0.23.5", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "rust_decimal", "json", "bit-vec"]
